@@ -3,6 +3,7 @@ package io.sentry;
 import io.sentry.connection.Connection;
 import io.sentry.connection.EventSendCallback;
 import io.sentry.connection.LockedDownException;
+import io.sentry.connection.TooManyRequestsException;
 import io.sentry.context.Context;
 import io.sentry.context.ContextManager;
 import io.sentry.event.Event;
@@ -132,8 +133,8 @@ public class SentryClient {
 
         try {
             connection.send(event);
-        } catch (LockedDownException e) {
-            lockdownLogger.warn("The connection to Sentry is currently locked down.", e);
+        } catch (LockedDownException | TooManyRequestsException e) {
+            logger.debug("Dropping an Event due to lockdown: " + event);
         } catch (Exception e) {
             logger.error("An exception occurred while sending the event to Sentry.", e);
         } finally {
